--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
-
+<script>
+	var fireballSize = 20;
+	</script>
 <script src="js/game.js"></script>
 
 </body>
