--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
 	console.log(getWizardY());
 	
 	</script>
-
+	
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
-<script src="js/stats.js"></script>
 
 </body>
 </html>
